--- a/app.json
+++ b/app.json
@@ -7,7 +7,13 @@
     "pages/scan/scan",
     "pages/share/share",
     "pages/store/store",
-    "pages/recharge/recharge"
+    "pages/recharge/recharge",
+    "pages/verify/verify",
+    "pages/cards/cards",
+    "pages/feedback/feedback",
+    "pages/merge/merge",
+    "pages/consumption/consumption",
+    "pages/door/door"
   ],
   "window": {
     "backgroundTextStyle": "light",
